devtools is being used within package_exports_checked.R so needed to be moved to Imports: section.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,9 @@ Depends:
 License: MIT + file LICENSE
 LazyData: true
 Imports:
+    devtools,
     memoise,
     methods
 Suggests:
-    testthat,
-    devtools
+    testthat
 RoxygenNote: 6.0.1
