Wrapped long line

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,15 @@ export(package_exports_checked)
 export(postconditions)
 export(preconditions)
 export(present)
+export(print_args)
 export(quickcheck)
 export(should_be_checked)
 export(validate)
 export(validate_)
 import(memoise)
 import(methods)
+importFrom(devtools,as.package)
+importFrom(utils,capture.output)
+importFrom(utils,data)
+importFrom(utils,head)
+importFrom(utils,installed.packages)
