--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,11 @@ export(validate_)
 import(memoise)
 import(methods)
 importFrom(devtools,as.package)
+importFrom(memoise,forget)
+importFrom(memoise,memoise)
+importFrom(methods,is)
 importFrom(utils,capture.output)
 importFrom(utils,data)
 importFrom(utils,head)
 importFrom(utils,installed.packages)
+importFrom(utils,tail)
