Adopting Peter Hurford's .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,10 @@ r_github_packages:
 script:
   - R -e 'r <- rcmdcheck::rcmdcheck(".", args = c("--no-manual")); l <- lintr::lint_package("."); print(l); devtools::install("."); devtools::test(); quit(save = "no", status = if (length(c(r$errors, r$warnings, l)) > 0) { 1 } else { 0 }, runLast = FALSE)'
 after_success:
-  - Rscript -e 'covr::codecov()'
-sudo: false
-os:
-  - osx
-warnings_are_errors: true
+  - R -e 'library(covr); coveralls()'
+env:
+  - global:
+    - CI=TRUE
+    - WARNINGS_ARE_ERRORS=1
+    - _R_CHECK_FORCE_SUGGESTS_=0
+    - LINTR_COMMENT_BOT=false
